--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--  custom color  -->
+    <color name="main_color">#FFEB62</color>
+    <color name="text_color_navy">#333D4B</color>
+    <color name="facebook_color">#1877F2</color>
 </resources>
