--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="main_color">#FFEB62</color>
     <color name="text_color_navy">#333D4B</color>
     <color name="facebook_color">#1877F2</color>
+    <color name="kakao_color">#FEE500</color>
+    <color name="indicator_stroke_color">#414851</color>
 </resources>
