--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/concert_one</item>
         <item>@font/inter</item>
         <item>@font/inter_semibold</item>
+        <item>@font/jua</item>
     </array>
 </resources>
