--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,11 @@
         <item name="android:textColor">@color/text_color_navy</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <!--  SignUpCompleteActivity  -->
+    <style name="sign_up_complete_text">
+        <item name="android:fontFamily">@font/jua</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
