--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,10 @@
     <color name="facebook_color">#1877F2</color>
     <color name="kakao_color">#FEE500</color>
     <color name="indicator_stroke_color">#414851</color>
+
+    <!--  mypage color  -->
+    <color name="mypage_unlink_btn_color">#F08080</color>
+    <color name="mypage_purple_color">#8F7CBC</color>
+    <color name="mypage_modal_stroke_color">#8F9090</color>
+    <color name="mypage_gray_color">#D3D3D3</color>
 </resources>
