--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,4 +93,19 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/jua</item>
     </style>
+    <!--  EditTripPageFragment  -->
+    <style name="edittrippage_title_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="edittrippage_input_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+
+
 </resources>
