#P : EditTripPage Markup (Part Of)

--- a/app/src/main/res/layout/fragment_edit_trip.xml
+++ b/app/src/main/res/layout/fragment_edit_trip.xml
@@ -8,28 +8,44 @@
         android:background="@color/white"
         tools:context=".fragment.EditTripFragment">
 
+        <ImageView
+            android:id="@+id/topLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo_small_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/topLogo"
-                android:layout_width="wrap_content"
+            <!--  정규 표현식 적용 예정  -->
+            <LinearLayout
+                android:id="@+id/tripTitleArea"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/logo_small_name"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/editTripPageTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="여행 추가 페이지"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/topLogo" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:text="@string/edittrippage_title_text"
+                    android:textAppearance="@style/edittrippage_title_text" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/edittrippage_input_pattern"/>
+
+            </LinearLayout>
 
             <!--  갤러리 & 카메라 연동 기능 추가 예정  -->
             <LinearLayout
@@ -37,28 +53,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editTripPageTitle">
+                app:layout_constraintTop_toBottomOf="@id/tripTitleArea">
 
                 <TextView
-                    android:text="프로필 사진 등록"
+                    android:text="@string/edittrippage_profile_photo_text"
+                    android:textAppearance="@style/edittrippage_title_text"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:src="@drawable/illustration3"
+                        android:src="@drawable/edittrippage_add_photo_btn"
                         android:layout_width="100dp"
-                        android:layout_height="100dp" />
+                        android:layout_height="100dp"
+                        android:padding="30dp"/>
 
                     <Button
-                        android:text="사진 선택하기"
+                        android:text="@string/edittrippage_profile_photo_register_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -68,10 +90,12 @@
 
             <!--  정규 표현식 적용 예정  -->
             <LinearLayout
-                android:id="@+id/tripTitleArea"
+                android:id="@+id/tripSubTitleArea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tripProfilePhotoArea">
@@ -79,38 +103,42 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="제목"
-                    android:textSize="14sp"
-                    android:textColor="@color/black"/>
+                    android:layout_marginBottom="4dp"
+                    android:text="@string/edittrippage_subtitle_text"
+                    android:textAppearance="@style/edittrippage_title_text"/>
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"/>
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/edittrippage_input_pattern"/>
 
             </LinearLayout>
 
             <!--  정규 표현식 적용 예정  -->
             <LinearLayout
-                android:id="@+id/tripSubTitleArea"
+                android:id="@+id/tripDescriptionArea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tripTitleArea">
+                app:layout_constraintTop_toBottomOf="@id/tripSubTitleArea">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="부제"
-                    android:textSize="14sp"
-                    android:textColor="@color/black"/>
+                    android:layout_marginBottom="4dp"
+                    android:text="@string/edittrippage_description_text"
+                    android:textAppearance="@style/edittrippage_title_text" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"/>
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/edittrippage_input_pattern" />
 
             </LinearLayout>
 
@@ -119,22 +147,25 @@
                 android:id="@+id/tripPasswordArea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tripSubTitleArea">
+                app:layout_constraintTop_toBottomOf="@id/tripDescriptionArea">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="여행 비밀번호"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
+                    android:layout_marginBottom="4dp"
+                    android:text="@string/edittrippage_password_text"
+                    android:textAppearance="@style/edittrippage_title_text" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/edittrippage_input_pattern" />
 
             </LinearLayout>
 
@@ -143,7 +174,9 @@
                 android:id="@+id/friendInviteArea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -152,8 +185,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="소셜 로그인 친구초대"
-                    android:textColor="@color/black"/>
+                    android:text="@string/edittrippage_sns_invite_text"
+                    android:textAppearance="@style/edittrippage_title_text"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -187,6 +220,7 @@
                 android:id="@+id/makeTripBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
