--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,6 +106,20 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/jua</item>
     </style>
-
-
+    <style name="edittrippage_go_feed_button_text">
+        <item name="android:color">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="edittrippage_sns_invite_button_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="edittrippage_profile_photo_register_button">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
 </resources>
