--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,4 +93,15 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/jua</item>
     </style>
+    <style name="nickname_dialog_title">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="nickname_dialog_save_btn">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">10sp</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
 </resources>
