--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -122,4 +122,25 @@
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/jua</item>
     </style>
+    <!--  TripFeedActivity  -->
+    <style name="post_publisher_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="post_description_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="post_like_text">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/jua</item>
+    </style>
+    <style name="comment_hint_text">
+        <item name="android:textColor">@color/edittrippage_gray_color</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/jua</item>
+    </style>
 </resources>
