--- a/app/src/main/res/layout/rv_item_post.xml
+++ b/app/src/main/res/layout/rv_item_post.xml
@@ -1,7 +1,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <?xml version="1.0" encoding="utf-8"?>
+<!--    <?xml version="1.0" encoding="utf-8"?>-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,12 +28,14 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/rv_publisher_profile_photo"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginRight="16dp"
                     android:src="@drawable/contributor1_small_icon" />
 
                 <TextView
+                    android:id="@+id/rv_publisher_profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tripfeedpage_publisher_name"
@@ -130,6 +132,7 @@
             app:layout_constraintTop_toBottomOf="@id/post_communication_area">
 
             <TextView
+                android:id="@+id/rv_post_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -198,6 +201,7 @@
             app:layout_constraintTop_toBottomOf="@id/post_comment_area">
 
             <ImageView
+                android:id="@+id/rv_user_profile_photo"
                 android:src="@drawable/contributor2_small_icon"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
